parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONTINUE
    DIV_IGUAL
    ELSE
    IF
    MAS_IGUAL
    MENOS_IGUAL
    MODULO
    MULT_IGUAL
    NOT
    NULL

Grammar

Rule 0     S' -> programa
Rule 1     programa -> elementos
Rule 2     elementos -> elemento
Rule 3     elementos -> elementos elemento
Rule 4     elemento -> sentencia_print
Rule 5     elemento -> funcion_void
Rule 6     elemento -> funcion_return
Rule 7     elemento -> declaracion_variable
Rule 8     elemento -> estructura_switch
Rule 9     elemento -> declaracion_map
Rule 10    elemento -> funcion_opcional
Rule 11    elemento -> estructura_while
Rule 12    elemento -> estructura_for
Rule 13    elemento -> declaracion_list
Rule 14    elemento -> declaracion_set
Rule 15    elemento -> funcion_nombrada
Rule 16    elemento -> declaracion_lambda
Rule 17    elemento -> clase
Rule 18    elemento -> ingreso_teclado
Rule 19    sentencia_print -> PRINT PARENTESIS_IZQ expresion_general PARENTESIS_DER PUNTOYCOMA
Rule 20    funcion_void -> VOID IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque
Rule 21    funcion_return -> STRING_TYPE IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque_return
Rule 22    bloque_return -> LLAVE_IZQ sentencia_return LLAVE_DER
Rule 23    sentencia_return -> RETURN CADENA PUNTOYCOMA
Rule 24    bloque -> LLAVE_IZQ LLAVE_DER
Rule 25    bloque -> LLAVE_IZQ elementos LLAVE_DER
Rule 26    expresion_booleana -> expresion MAYOR expresion
Rule 27    expresion_booleana -> expresion MENOR expresion
Rule 28    expresion_booleana -> expresion IGUAL_IGUAL expresion
Rule 29    expresion_booleana -> expresion DISTINTO expresion
Rule 30    expresion_booleana -> expresion MAYOR_IGUAL expresion
Rule 31    expresion_booleana -> expresion MENOR_IGUAL expresion
Rule 32    expresion_booleana -> TRUE
Rule 33    expresion_booleana -> FALSE
Rule 34    expresion_booleana -> expresion_booleana AND expresion_booleana
Rule 35    expresion_booleana -> expresion_booleana OR expresion_booleana
Rule 36    expresion -> expresion MAS termino
Rule 37    expresion -> expresion MENOS termino
Rule 38    expresion -> termino
Rule 39    termino -> termino MULTIPLICACION factor
Rule 40    termino -> termino DIVISION factor
Rule 41    termino -> factor
Rule 42    factor -> ENTERO
Rule 43    factor -> DECIMAL
Rule 44    factor -> CADENA
Rule 45    factor -> IDENTIFICADOR
Rule 46    factor -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 47    factor -> factor PARENTESIS_IZQ lista_args PARENTESIS_DER
Rule 48    factor -> factor PUNTO IDENTIFICADOR
Rule 49    factor -> factor CORCHETE_IZQ expresion CORCHETE_DER
Rule 50    incremento -> IDENTIFICADOR INCREMENTO
Rule 51    incremento -> IDENTIFICADOR DECREMENTO
Rule 52    incremento -> IDENTIFICADOR ASIGNACION expresion
Rule 53    estructura_for -> FOR PARENTESIS_IZQ for_init PUNTOYCOMA expresion_booleana PUNTOYCOMA incremento PARENTESIS_DER bloque
Rule 54    for_init -> <empty>
Rule 55    for_init -> tipo IDENTIFICADOR ASIGNACION expresion
Rule 56    for_init -> VAR IDENTIFICADOR ASIGNACION expresion
Rule 57    declaracion_list -> IDENTIFICADOR MENOR tipo MAYOR IDENTIFICADOR ASIGNACION CORCHETE_IZQ lista_elementos CORCHETE_DER PUNTOYCOMA
Rule 58    declaracion_set -> IDENTIFICADOR MENOR tipo MAYOR IDENTIFICADOR ASIGNACION LLAVE_IZQ lista_elementos LLAVE_DER PUNTOYCOMA
Rule 59    lista_elementos -> expresion
Rule 60    lista_elementos -> lista_elementos COMA expresion
Rule 61    funcion_nombrada -> VOID IDENTIFICADOR PARENTESIS_IZQ LLAVE_IZQ lista_param_nombrados LLAVE_DER PARENTESIS_DER bloque
Rule 62    lista_param_nombrados -> param_nombrado
Rule 63    lista_param_nombrados -> lista_param_nombrados COMA param_nombrado
Rule 64    param_nombrado -> tipo IDENTIFICADOR ASIGNACION expresion
Rule 65    declaracion_lambda -> tipo IDENTIFICADOR ASIGNACION PARENTESIS_IZQ lista_params PARENTESIS_DER FLECHA expresion PUNTOYCOMA
Rule 66    lista_params -> <empty>
Rule 67    lista_params -> param_simple
Rule 68    lista_params -> lista_params COMA param_simple
Rule 69    param_simple -> tipo IDENTIFICADOR
Rule 70    lista_args -> <empty>
Rule 71    lista_args -> expresion
Rule 72    lista_args -> lista_args COMA expresion
Rule 73    estructura_while -> WHILE PARENTESIS_IZQ expresion_booleana PARENTESIS_DER bloque
Rule 74    clase -> CLASS IDENTIFICADOR LLAVE_IZQ LLAVE_DER
Rule 75    ingreso_teclado -> STRING_TYPE IDENTIFICADOR ASIGNACION IDENTIFICADOR PUNTO IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER PUNTOYCOMA
Rule 76    tipo -> INT_TYPE
Rule 77    tipo -> DOUBLE_TYPE
Rule 78    tipo -> STRING_TYPE
Rule 79    tipo -> BOOL_TYPE
Rule 80    declaracion_variable -> tipo IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
Rule 81    declaracion_variable -> VAR IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
Rule 82    declaracion_variable -> CONST tipo IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
Rule 83    declaracion_variable -> FINAL tipo IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
Rule 84    estructura_switch -> SWITCH PARENTESIS_IZQ IDENTIFICADOR PARENTESIS_DER LLAVE_IZQ lista_casos LLAVE_DER
Rule 85    lista_casos -> caso
Rule 86    lista_casos -> lista_casos caso
Rule 87    lista_casos -> lista_casos caso_default
Rule 88    lista_casos -> caso_default
Rule 89    caso -> CASE expresion DOS_PUNTOS sentencia_print BREAK PUNTOYCOMA
Rule 90    caso_default -> DEFAULT DOS_PUNTOS sentencia_print
Rule 91    declaracion_map -> IDENTIFICADOR MENOR tipo COMA IDENTIFICADOR MAYOR IDENTIFICADOR ASIGNACION LLAVE_IZQ lista_pares LLAVE_DER PUNTOYCOMA
Rule 92    lista_pares -> par
Rule 93    lista_pares -> lista_pares COMA par
Rule 94    par -> CADENA DOS_PUNTOS expresion
Rule 95    funcion_opcional -> VOID IDENTIFICADOR PARENTESIS_IZQ tipo IDENTIFICADOR COMA CORCHETE_IZQ lista_param_opcionales CORCHETE_DER PARENTESIS_DER bloque
Rule 96    lista_param_opcionales -> param_opcional
Rule 97    lista_param_opcionales -> lista_param_opcionales COMA param_opcional
Rule 98    param_opcional -> tipo IDENTIFICADOR ASIGNACION expresion
Rule 99    expresion_general -> expresion
Rule 100   expresion_general -> expresion_booleana

Terminals, with rules where they appear

AND                  : 34
ASIGNACION           : 52 55 56 57 58 64 65 75 80 81 82 83 91 98
BOOL_TYPE            : 79
BREAK                : 89
CADENA               : 23 44 94
CASE                 : 89
CLASS                : 74
COMA                 : 60 63 68 72 91 93 95 97
CONST                : 82
CONTINUE             : 
CORCHETE_DER         : 49 57 95
CORCHETE_IZQ         : 49 57 95
DECIMAL              : 43
DECREMENTO           : 51
DEFAULT              : 90
DISTINTO             : 29
DIVISION             : 40
DIV_IGUAL            : 
DOS_PUNTOS           : 89 90 94
DOUBLE_TYPE          : 77
ELSE                 : 
ENTERO               : 42
FALSE                : 33
FINAL                : 83
FLECHA               : 65
FOR                  : 53
IDENTIFICADOR        : 20 21 45 48 50 51 52 55 56 57 57 58 58 61 64 65 69 74 75 75 75 80 81 82 83 84 91 91 91 95 95 98
IF                   : 
IGUAL_IGUAL          : 28
INCREMENTO           : 50
INT_TYPE             : 76
LLAVE_DER            : 22 24 25 58 61 74 84 91
LLAVE_IZQ            : 22 24 25 58 61 74 84 91
MAS                  : 36
MAS_IGUAL            : 
MAYOR                : 26 57 58 91
MAYOR_IGUAL          : 30
MENOR                : 27 57 58 91
MENOR_IGUAL          : 31
MENOS                : 37
MENOS_IGUAL          : 
MODULO               : 
MULTIPLICACION       : 39
MULT_IGUAL           : 
NOT                  : 
NULL                 : 
OR                   : 35
PARENTESIS_DER       : 19 20 21 46 47 53 61 65 73 75 84 95
PARENTESIS_IZQ       : 19 20 21 46 47 53 61 65 73 75 84 95
PRINT                : 19
PUNTO                : 48 75
PUNTOYCOMA           : 19 23 53 53 57 58 65 75 80 81 82 83 89 91
RETURN               : 23
STRING_TYPE          : 21 75 78
SWITCH               : 84
TRUE                 : 32
VAR                  : 56 81
VOID                 : 20 61 95
WHILE                : 73
error                : 

Nonterminals, with rules where they appear

bloque               : 20 53 61 73 95
bloque_return        : 21
caso                 : 85 86
caso_default         : 87 88
clase                : 17
declaracion_lambda   : 16
declaracion_list     : 13
declaracion_map      : 9
declaracion_set      : 14
declaracion_variable : 7
elemento             : 2 3
elementos            : 1 3 25
estructura_for       : 12
estructura_switch    : 8
estructura_while     : 11
expresion            : 26 26 27 27 28 28 29 29 30 30 31 31 36 37 46 49 52 55 56 59 60 64 65 71 72 89 94 98 99
expresion_booleana   : 34 34 35 35 53 73 100
expresion_general    : 19 80 81 82 83
factor               : 39 40 41 47 48 49
for_init             : 53
funcion_nombrada     : 15
funcion_opcional     : 10
funcion_return       : 6
funcion_void         : 5
incremento           : 53
ingreso_teclado      : 18
lista_args           : 47 72
lista_casos          : 84 86 87
lista_elementos      : 57 58 60
lista_param_nombrados : 61 63
lista_param_opcionales : 95 97
lista_params         : 65 68
lista_pares          : 91 93
par                  : 92 93
param_nombrado       : 62 63
param_opcional       : 96 97
param_simple         : 67 68
programa             : 0
sentencia_print      : 4 89 90
sentencia_return     : 22
termino              : 36 37 38 39 40
tipo                 : 55 57 58 64 65 69 80 82 83 91 95 98

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . elementos
    (2) elementos -> . elemento
    (3) elementos -> . elementos elemento
    (4) elemento -> . sentencia_print
    (5) elemento -> . funcion_void
    (6) elemento -> . funcion_return
    (7) elemento -> . declaracion_variable
    (8) elemento -> . estructura_switch
    (9) elemento -> . declaracion_map
    (10) elemento -> . funcion_opcional
    (11) elemento -> . estructura_while
    (12) elemento -> . estructura_for
    (13) elemento -> . declaracion_list
    (14) elemento -> . declaracion_set
    (15) elemento -> . funcion_nombrada
    (16) elemento -> . declaracion_lambda
    (17) elemento -> . clase
    (18) elemento -> . ingreso_teclado
    (19) sentencia_print -> . PRINT PARENTESIS_IZQ expresion_general PARENTESIS_DER PUNTOYCOMA
    (20) funcion_void -> . VOID IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque
    (21) funcion_return -> . STRING_TYPE IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque_return
    (80) declaracion_variable -> . tipo IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
    (81) declaracion_variable -> . VAR IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
    (82) declaracion_variable -> . CONST tipo IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
    (83) declaracion_variable -> . FINAL tipo IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
    (84) estructura_switch -> . SWITCH PARENTESIS_IZQ IDENTIFICADOR PARENTESIS_DER LLAVE_IZQ lista_casos LLAVE_DER
    (91) declaracion_map -> . IDENTIFICADOR MENOR tipo COMA IDENTIFICADOR MAYOR IDENTIFICADOR ASIGNACION LLAVE_IZQ lista_pares LLAVE_DER PUNTOYCOMA
    (95) funcion_opcional -> . VOID IDENTIFICADOR PARENTESIS_IZQ tipo IDENTIFICADOR COMA CORCHETE_IZQ lista_param_opcionales CORCHETE_DER PARENTESIS_DER bloque
    (73) estructura_while -> . WHILE PARENTESIS_IZQ expresion_booleana PARENTESIS_DER bloque
    (53) estructura_for -> . FOR PARENTESIS_IZQ for_init PUNTOYCOMA expresion_booleana PUNTOYCOMA incremento PARENTESIS_DER bloque
    (57) declaracion_list -> . IDENTIFICADOR MENOR tipo MAYOR IDENTIFICADOR ASIGNACION CORCHETE_IZQ lista_elementos CORCHETE_DER PUNTOYCOMA
    (58) declaracion_set -> . IDENTIFICADOR MENOR tipo MAYOR IDENTIFICADOR ASIGNACION LLAVE_IZQ lista_elementos LLAVE_DER PUNTOYCOMA
    (61) funcion_nombrada -> . VOID IDENTIFICADOR PARENTESIS_IZQ LLAVE_IZQ lista_param_nombrados LLAVE_DER PARENTESIS_DER bloque
    (65) declaracion_lambda -> . tipo IDENTIFICADOR ASIGNACION PARENTESIS_IZQ lista_params PARENTESIS_DER FLECHA expresion PUNTOYCOMA
    (74) clase -> . CLASS IDENTIFICADOR LLAVE_IZQ LLAVE_DER
    (75) ingreso_teclado -> . STRING_TYPE IDENTIFICADOR ASIGNACION IDENTIFICADOR PUNTO IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER PUNTOYCOMA
    (76) tipo -> . INT_TYPE
    (77) tipo -> . DOUBLE_TYPE
    (78) tipo -> . STRING_TYPE
    (79) tipo -> . BOOL_TYPE

    PRINT           shift and go to state 19
    VOID            shift and go to state 20
    STRING_TYPE     shift and go to state 22
    VAR             shift and go to state 24
    CONST           shift and go to state 25
    FINAL           shift and go to state 26
    SWITCH          shift and go to state 27
    IDENTIFICADOR   shift and go to state 21
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    CLASS           shift and go to state 30
    INT_TYPE        shift and go to state 31
    DOUBLE_TYPE     shift and go to state 32
    BOOL_TYPE       shift and go to state 33

    programa                       shift and go to state 1
    elementos                      shift and go to state 2
    elemento                       shift and go to state 3
    sentencia_print                shift and go to state 4
    funcion_void                   shift and go to state 5
    funcion_return                 shift and go to state 6
    declaracion_variable           shift and go to state 7
    estructura_switch              shift and go to state 8
    declaracion_map                shift and go to state 9
    funcion_opcional               shift and go to state 10
    estructura_while               shift and go to state 11
    estructura_for                 shift and go to state 12
    declaracion_list               shift and go to state 13
    declaracion_set                shift and go to state 14
    funcion_nombrada               shift and go to state 15
    declaracion_lambda             shift and go to state 16
    clase                          shift and go to state 17
    ingreso_teclado                shift and go to state 18
    tipo                           shift and go to state 23

state 1

    (0) S' -> programa .



state 2

    (1) programa -> elementos .
    (3) elementos -> elementos . elemento
    (4) elemento -> . sentencia_print
    (5) elemento -> . funcion_void
    (6) elemento -> . funcion_return
    (7) elemento -> . declaracion_variable
    (8) elemento -> . estructura_switch
    (9) elemento -> . declaracion_map
    (10) elemento -> . funcion_opcional
    (11) elemento -> . estructura_while
    (12) elemento -> . estructura_for
    (13) elemento -> . declaracion_list
    (14) elemento -> . declaracion_set
    (15) elemento -> . funcion_nombrada
    (16) elemento -> . declaracion_lambda
    (17) elemento -> . clase
    (18) elemento -> . ingreso_teclado
    (19) sentencia_print -> . PRINT PARENTESIS_IZQ expresion_general PARENTESIS_DER PUNTOYCOMA
    (20) funcion_void -> . VOID IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque
    (21) funcion_return -> . STRING_TYPE IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque_return
    (80) declaracion_variable -> . tipo IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
    (81) declaracion_variable -> . VAR IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
    (82) declaracion_variable -> . CONST tipo IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
    (83) declaracion_variable -> . FINAL tipo IDENTIFICADOR ASIGNACION expresion_general PUNTOYCOMA
    (84) estructura_switch -> . SWITCH PARENTESIS_IZQ IDENTIFICADOR PARENTESIS_DER LLAVE_IZQ lista_casos LLAVE_DER
    (91) declaracion_map -> . IDENTIFICADOR MENOR tipo COMA IDENTIFICADOR MAYOR IDENTIFICADOR ASIGNACION LLAVE_IZQ lista_pares LLAVE_DER PUNTOYCOMA
    (95) funcion_opcional -> . VOID IDENTIFICADOR PARENTESIS_IZQ tipo IDENTIFICADOR COMA CORCHETE_IZQ lista_param_opcionales CORCHETE_DER PARENTESIS_DER bloque
    (73) estructura_while -> . WHILE PARENTESIS_IZQ expresion_booleana PARENTESIS_DER bloque
    (53) estructura_for -> . FOR PARENTESIS_IZQ for_init PUNTOYCOMA expresion_booleana PUNTOYCOMA incremento PARENTESIS_DER bloque
    (57) declaracion_list -> . IDENTIFICADOR MENOR tipo MAYOR IDENTIFICADOR ASIGNACION CORCHETE_IZQ lista_elementos CORCHETE_DER PUNTOYCOMA
    (58) declaracion_set -> . IDENTIFICADOR MENOR tipo MAYOR IDENTIFICADOR ASIGNACION LLAVE_IZQ lista_elementos LLAVE_DER PUNTOYCOMA
    (61) funcion_nombrada -> . VOID IDENTIFICADOR PARENTESIS_IZQ LLAVE_IZQ lista_param_nombrados LLAVE_DER PARENTESIS_DER bloque
    (65) declaracion_lambda -> . tipo IDENTIFICADOR ASIGNACION PARENTESIS_IZQ lista_params PARENTESIS_DER FLECHA expresion PUNTOYCOMA
    (74) clase -> . CLASS IDENTIFICADOR LLAVE_IZQ LLAVE_DER
    (75) ingreso_teclado -> . STRING_TYPE IDENTIFICADOR ASIGNACION IDENTIFICADOR PUNTO IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER PUNTOYCOMA
    (76) tipo -> . INT_TYPE
    (77) tipo -> . DOUBLE_TYPE
    (78) tipo -> . STRING_TYPE
    (79) tipo -> . BOOL_TYPE

    $end            reduce using rule 1 (programa -> elementos .)
    PRINT           shift and go to state 19
    VOID            shift and go to state 20
    STRING_TYPE     shift and go to state 22
    VAR             shift and go to state 24
    CONST           shift and go to state 25
    FINAL           shift and go to state 26
    SWITCH          shift and go to state 27
    IDENTIFICADOR   shift and go to state 21
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    CLASS           shift and go to state 30
    INT_TYPE        shift and go to state 31
    DOUBLE_TYPE     shift and go to state 32
    BOOL_TYPE       shift and go to state 33

    elemento                       shift and go to state 34
    sentencia_print                shift and go to state 4
    funcion_void                   shift and go to state 5
    funcion_return                 shift and go to state 6
    declaracion_variable           shift and go to state 7
    estructura_switch              shift and go to state 8
    declaracion_map                shift and go to state 9
    funcion_opcional               shift and go to state 10
    estructura_while               shift and go to state 11
    estructura_for                 shift and go to state 12
    declaracion_list               shift and go to state 13
    declaracion_set                shift and go to state 14
    funcion_nombrada               shift and go to state 15
    declaracion_lambda             shift and go to state 16
    clase                          shift and go to state 17
    ingreso_teclado                shift and go to state 18
    tipo                           shift and go to state 23

state 3

    (2) elementos -> elemento .

    PRINT           reduce using rule 2 (elementos -> elemento .)
    VOID            reduce using rule 2 (elementos -> elemento .)
    STRING_TYPE     reduce using rule 2 (elementos -> elemento .)
    VAR             reduce using rule 2 (elementos -> elemento .)
    CONST           reduce using rule 2 (elementos -> elemento .)
    FINAL           reduce using rule 2 (elementos -> elemento .)
    SWITCH          reduce using rule 2 (elementos -> elemento .)
    IDENTIFICADOR   reduce using rule 2 (elementos -> elemento .)
    WHILE           reduce using rule 2 (elementos -> elemento .)
    FOR             reduce using rule 2 (elementos -> elemento .)
    CLASS           reduce using rule 2 (elementos -> elemento .)
    INT_TYPE        reduce using rule 2 (elementos -> elemento .)
    DOUBLE_TYPE     reduce using rule 2 (elementos -> elemento .)
    BOOL_TYPE       reduce using rule 2 (elementos -> elemento .)
    $end            reduce using rule 2 (elementos -> elemento .)
    LLAVE_DER       reduce using rule 2 (elementos -> elemento .)


state 4

    (4) elemento -> sentencia_print .

    PRINT           reduce using rule 4 (elemento -> sentencia_print .)
    VOID            reduce using rule 4 (elemento -> sentencia_print .)
    STRING_TYPE     reduce using rule 4 (elemento -> sentencia_print .)
    VAR             reduce using rule 4 (elemento -> sentencia_print .)
    CONST           reduce using rule 4 (elemento -> sentencia_print .)
    FINAL           reduce using rule 4 (elemento -> sentencia_print .)
    SWITCH          reduce using rule 4 (elemento -> sentencia_print .)
    IDENTIFICADOR   reduce using rule 4 (elemento -> sentencia_print .)
    WHILE           reduce using rule 4 (elemento -> sentencia_print .)
    FOR             reduce using rule 4 (elemento -> sentencia_print .)
    CLASS           reduce using rule 4 (elemento -> sentencia_print .)
    INT_TYPE        reduce using rule 4 (elemento -> sentencia_print .)
    DOUBLE_TYPE     reduce using rule 4 (elemento -> sentencia_print .)
    BOOL_TYPE       reduce using rule 4 (elemento -> sentencia_print .)
    $end            reduce using rule 4 (elemento -> sentencia_print .)
    LLAVE_DER       reduce using rule 4 (elemento -> sentencia_print .)


state 5

    (5) elemento -> funcion_void .

    PRINT           reduce using rule 5 (elemento -> funcion_void .)
    VOID            reduce using rule 5 (elemento -> funcion_void .)
    STRING_TYPE     reduce using rule 5 (elemento -> funcion_void .)
    VAR             reduce using rule 5 (elemento -> funcion_void .)
    CONST           reduce using rule 5 (elemento -> funcion_void .)
    FINAL           reduce using rule 5 (elemento -> funcion_void .)
    SWITCH          reduce using rule 5 (elemento -> funcion_void .)
    IDENTIFICADOR   reduce using rule 5 (elemento -> funcion_void .)
    WHILE           reduce using rule 5 (elemento -> funcion_void .)
    FOR             reduce using rule 5 (elemento -> funcion_void .)
    CLASS           reduce using rule 5 (elemento -> funcion_void .)
    INT_TYPE        reduce using rule 5 (elemento -> funcion_void .)
    DOUBLE_TYPE     reduce using rule 5 (elemento -> funcion_void .)
    BOOL_TYPE       reduce using rule 5 (elemento -> funcion_void .)
    $end            reduce using rule 5 (elemento -> funcion_void .)
    LLAVE_DER       reduce using rule 5 (elemento -> funcion_void .)


state 6

    (6) elemento -> funcion_return .

    PRINT           reduce using rule 6 (elemento -> funcion_return .)
    VOID            reduce using rule 6 (elemento -> funcion_return .)
    STRING_TYPE     reduce using rule 6 (elemento -> funcion_return .)
    VAR             reduce using rule 6 (elemento -> funcion_return .)
    CONST           reduce using rule 6 (elemento -> funcion_return .)
    FINAL           reduce using rule 6 (elemento -> funcion_return .)
    SWITCH          reduce using rule 6 (elemento -> funcion_return .)
    IDENTIFICADOR   reduce using rule 6 (elemento -> funcion_return .)
    WHILE           reduce using rule 6 (elemento -> funcion_return .)
    FOR             reduce using rule 6 (elemento -> funcion_return .)
    CLASS           reduce using rule 6 (elemento -> funcion_return .)
    INT_TYPE        reduce using rule 6 (elemento -> funcion_return .)
    DOUBLE_TYPE     reduce using rule 6 (elemento -> funcion_return .)
    BOOL_TYPE       reduce using rule 6 (elemento -> funcion_return .)
    $end            reduce using rule 6 (elemento -> funcion_return .)
    LLAVE_DER       reduce using rule 6 (elemento -> funcion_return .)


state 7

    (7) elemento -> declaracion_variable .

    PRINT           reduce using rule 7 (elemento -> declaracion_variable .)
    VOID            reduce using rule 7 (elemento -> declaracion_variable .)
    STRING_TYPE     reduce using rule 7 (elemento -> declaracion_variable .)
    VAR             reduce using rule 7 (elemento -> declaracion_variable .)
    CONST           reduce using rule 7 (elemento -> declaracion_variable .)
    FINAL           reduce using rule 7 (elemento -> declaracion_variable .)
    SWITCH          reduce using rule 7 (elemento -> declaracion_variable .)
    IDENTIFICADOR   reduce using rule 7 (elemento -> declaracion_variable .)
    WHILE           reduce using rule 7 (elemento -> declaracion_variable .)
    FOR             reduce using rule 7 (elemento -> declaracion_variable .)
    CLASS           reduce using rule 7 (elemento -> declaracion_variable .)
    INT_TYPE        reduce using rule 7 (elemento -> declaracion_variable .)
    DOUBLE_TYPE     reduce using rule 7 (elemento -> declaracion_variable .)
    BOOL_TYPE       reduce using rule 7 (elemento -> declaracion_variable .)
    $end            reduce using rule 7 (elemento -> declaracion_variable .)
    LLAVE_DER       reduce using rule 7 (elemento -> declaracion_variable .)


state 8

    (8) elemento -> estructura_switch .

    PRINT           reduce using rule 8 (elemento -> estructura_switch .)
    VOID            reduce using rule 8 (elemento -> estructura_switch .)
    STRING_TYPE     reduce using rule 8 (elemento -> estructura_switch .)
    VAR             reduce using rule 8 (elemento -> estructura_switch .)
    CONST           reduce using rule 8 (elemento -> estructura_switch .)
    FINAL           reduce using rule 8 (elemento -> estructura_switch .)
    SWITCH          reduce using rule 8 (elemento -> estructura_switch .)
    IDENTIFICADOR   reduce using rule 8 (elemento -> estructura_switch .)
    WHILE           reduce using rule 8 (elemento -> estructura_switch .)
    FOR             reduce using rule 8 (elemento -> estructura_switch .)
    CLASS           reduce using rule 8 (elemento -> estructura_switch .)
    INT_TYPE        reduce using rule 8 (elemento -> estructura_switch .)
    DOUBLE_TYPE     reduce using rule 8 (elemento -> estructura_switch .)
    BOOL_TYPE       reduce using rule 8 (elemento -> estructura_switch .)
    $end            reduce using rule 8 (elemento -> estructura_switch .)
    LLAVE_DER       reduce using rule 8 (elemento -> estructura_switch .)


state 9

    (9) elemento -> declaracion_map .

    PRINT           reduce using rule 9 (elemento -> declaracion_map .)
    VOID            reduce using rule 9 (elemento -> declaracion_map .)
    STRING_TYPE     reduce using rule 9 (elemento -> declaracion_map .)
    VAR             reduce using rule 9 (elemento -> declaracion_map .)
    CONST           reduce using rule 9 (elemento -> declaracion_map .)
    FINAL           reduce using rule 9 (elemento -> declaracion_map .)
    SWITCH          reduce using rule 9 (elemento -> declaracion_map .)
    IDENTIFICADOR   reduce using rule 9 (elemento -> declaracion_map .)
    WHILE           reduce using rule 9 (elemento -> declaracion_map .)
    FOR             reduce using rule 9 (elemento -> declaracion_map .)
    CLASS           reduce using rule 9 (elemento -> declaracion_map .)
    INT_TYPE        reduce using rule 9 (elemento -> declaracion_map .)
    DOUBLE_TYPE     reduce using rule 9 (elemento -> declaracion_map .)
    BOOL_TYPE       reduce using rule 9 (elemento -> declaracion_map .)
    $end            reduce using rule 9 (elemento -> declaracion_map .)
    LLAVE_DER       reduce using rule 9 (elemento -> declaracion_map .)


state 10

    (10) elemento -> funcion_opcional .

    PRINT           reduce using rule 10 (elemento -> funcion_opcional .)
    VOID            reduce using rule 10 (elemento -> funcion_opcional .)
    STRING_TYPE     reduce using rule 10 (elemento -> funcion_opcional .)
    VAR             reduce using rule 10 (elemento -> funcion_opcional .)
    CONST           reduce using rule 10 (elemento -> funcion_opcional .)
    FINAL           reduce using rule 10 (elemento -> funcion_opcional .)
    SWITCH          reduce using rule 10 (elemento -> funcion_opcional .)
    IDENTIFICADOR   reduce using rule 10 (elemento -> funcion_opcional .)
    WHILE           reduce using rule 10 (elemento -> funcion_opcional .)
    FOR             reduce using rule 10 (elemento -> funcion_opcional .)
    CLASS           reduce using rule 10 (elemento -> funcion_opcional .)
    INT_TYPE        reduce using rule 10 (elemento -> funcion_opcional .)
    DOUBLE_TYPE     reduce using rule 10 (elemento -> funcion_opcional .)
    BOOL_TYPE       reduce using rule 10 (elemento -> funcion_opcional .)
    $end            reduce using rule 10 (elemento -> funcion_opcional .)
    LLAVE_DER       reduce using rule 10 (elemento -> funcion_opcional .)


state 11

    (11) elemento -> estructura_while .

    PRINT           reduce using rule 11 (elemento -> estructura_while .)
    VOID            reduce using rule 11 (elemento -> estructura_while .)
    STRING_TYPE     reduce using rule 11 (elemento -> estructura_while .)
    VAR             reduce using rule 11 (elemento -> estructura_while .)
    CONST           reduce using rule 11 (elemento -> estructura_while .)
    FINAL           reduce using rule 11 (elemento -> estructura_while .)
    SWITCH          reduce using rule 11 (elemento -> estructura_while .)
    IDENTIFICADOR   reduce using rule 11 (elemento -> estructura_while .)
    WHILE           reduce using rule 11 (elemento -> estructura_while .)
    FOR             reduce using rule 11 (elemento -> estructura_while .)
    CLASS           reduce using rule 11 (elemento -> estructura_while .)
    INT_TYPE        reduce using rule 11 (elemento -> estructura_while .)
    DOUBLE_TYPE     reduce using rule 11 (elemento -> estructura_while .)
    BOOL_TYPE       reduce using rule 11 (elemento -> estructura_while .)
    $end            reduce using rule 11 (elemento -> estructura_while .)
    LLAVE_DER       reduce using rule 11 (elemento -> estructura_while .)


state 12

    (12) elemento -> estructura_for .

    PRINT           reduce using rule 12 (elemento -> estructura_for .)
    VOID            reduce using rule 12 (elemento -> estructura_for .)
    STRING_TYPE     reduce using rule 12 (elemento -> estructura_for .)
    VAR             reduce using rule 12 (elemento -> estructura_for .)
    CONST           reduce using rule 12 (elemento -> estructura_for .)
    FINAL           reduce using rule 12 (elemento -> estructura_for .)
    SWITCH          reduce using rule 12 (elemento -> estructura_for .)
    IDENTIFICADOR   reduce using rule 12 (elemento -> estructura_for .)
    WHILE           reduce using rule 12 (elemento -> estructura_for .)
    FOR             reduce using rule 12 (elemento -> estructura_for .)
    CLASS           reduce using rule 12 (elemento -> estructura_for .)
    INT_TYPE        reduce using rule 12 (elemento -> estructura_for .)
    DOUBLE_TYPE     reduce using rule 12 (elemento -> estructura_for .)
    BOOL_TYPE       reduce using rule 12 (elemento -> estructura_for .)
    $end            reduce using rule 12 (elemento -> estructura_for .)
    LLAVE_DER       reduce using rule 12 (elemento -> estructura_for .)


state 13

    (13) elemento -> declaracion_list .
